[gd_scene load_steps=2 format=3 uid="uid://cpausemenu001"]

[ext_resource type="Script" path="res://ui/pause_menu.gd" id="1_script"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Overlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="PanelContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="CenterContainer/Panel"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Margin" type="MarginContainer" parent="CenterContainer/Panel/VBox"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="Content" type="VBoxContainer" parent="CenterContainer/Panel/VBox/Margin"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="CenterContainer/Panel/VBox/Margin/Content"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "ПАУЗА"
horizontal_alignment = 1

[node name="Buttons" type="VBoxContainer" parent="CenterContainer/Panel/VBox/Margin/Content"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="ResumeButton" type="Button" parent="CenterContainer/Panel/VBox/Margin/Content/Buttons"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Продолжить"

[node name="RestartButton" type="Button" parent="CenterContainer/Panel/VBox/Margin/Content/Buttons"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Заново"

[node name="MainMenuButton" type="Button" parent="CenterContainer/Panel/VBox/Margin/Content/Buttons"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "В главное меню"

[connection signal="pressed" from="CenterContainer/Panel/VBox/Margin/Content/Buttons/ResumeButton" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="CenterContainer/Panel/VBox/Margin/Content/Buttons/RestartButton" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="CenterContainer/Panel/VBox/Margin/Content/Buttons/MainMenuButton" to="." method="_on_main_menu_pressed"]
